2007-04-15  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_avahi.cpp: Don't prefix error message in throw() when
	discovering failed. The error handler may still do this.

2007-04-15  Philipp Kern <phil@0x539.de>

	* src/zeroconf_avahi.cpp: remove debug output on stdout and stderr

2007-04-15  Philipp Kern <phil@0x539.de>

	* configure.ac, NEWS: bump version to 0.4.3, document changes
	* Makefile.am: add obby session conversion script to the tarball
	* po/Makevars: updated Trac URL
	* po/obby.pot, po/*.po: updated line numbers, Trac URL

2007-04-14  Armin Burgmeier  <armin@0x539.de>

	* inc/zeroconf.hpp: Added another TODO comment about adding extended
	API to handle zeroconf errors.

2007-04-14  Armin Burgmeier  <armin@0x539.de>

	* inc/Makefile.am: Do not only distribute zeroconf_avahi.hpp, but also
	the other header files.

2007-04-14  Armin Burgmeier  <armin@0x539.de>

	* inc/zeroconf.hpp: Added a TODO comment that zeroconf_base should get
	a virtual destructor as soon as we can break ABI.

2007-04-14  Armin Burgmeier  <armin@0x539.de>

	* inc/zeroconf_avahi.hpp:
	* src/zeroconf_avahi.cpp: Allow custom AvahiPoll to be const.

2007-04-14  Philipp Kern <phil@0x539.de>

	* src/Makefile.am: bump library minor version for ABI changes
	  from 0:0:0 to 0:1:0

2007-04-14  Armin Burgmeier  <armin@0x539.de>

	* inc/zeroconf_avahi.hpp:
	* src/zeroconf_avahi.cpp: Added a constructor that allows the use of
	a custom AvahiPoll, and use AvahiSimplePoll in the default
	constructor. Added a obby::avahi_select::poll that implements an avahi
	poll with a net6 selector as backend. This is yet untested.

2007-04-14  Philipp Kern <phil@0x539.de>

	* inc/Makefile.am: install zeroconf_avahi.hpp because dependent
	  applications might want to dynamic_cast it to specify
	  a custom poll loop

2007-04-14  Philipp Kern <phil@0x539.de>

	* src/common.cpp: additional entry in the library's symbol table
	  if Avahi is used as Zeroconf backend

2007-04-14  Philipp Kern <phil@0x539.de>
